Atualizando index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <section id="secao2" class="secoes fundoPretoTransparente">
                 <h1 id="titulo1">Nossa Solução</h1>
                 <h1 id="titulo2">Monitoramento de luminosidade subaquática</h1> 
-                <img src="/img/circuitoArduino.webp" alt="Imagem do circuito arduino da nossa solução" id="imagemCircuito">
+                <img src="img/circuitoArduino.webp" alt="Imagem do circuito arduino da nossa solução" id="imagemCircuito">
                 <div  class="cardBox">
                     <div class="card">
                         <h3>Consequências do petróleo no Mar</h3>
